# ParserDB

./: .gitignore  CMakeLists.txt  a.out  contracoes.cont  contracoes.txt  main.c
benchmark/: find_lexic_unit.cpp
data/: contracoes.cont  grammar.cnf  preposicoes.txt
include/: ceten_folha.hpp  delaf_dictionary.h  dictionary.hpp  hash_dic.hpp  lexico.hpp  string_def.hpp  tokens.hpp
include/export/: pcfg.h
include/grammar/: cky.hpp  constituency.hpp  grammar.hpp  igrammar.hpp  input_rules.hpp  pcfg.hpp  rules.hpp
include/lexicon/: lexicon.h
include/lexicon/ceten_folha/: ceten_folha.hpp
include/lexicon/core/: database.hpp  tokens.hpp  types.h
include/lexicon/delas/: contractions_file.h  delas_file.h  delas_parser.h  type.h
include/parser/: grammar.hpp  input_rules.hpp  rules.hpp
include/utils/: binary_tree.hpp  matrix.hpp  unit.hpp
interface/: Files.py  app.py  cfg.txt  requirements.txt  utils.py
interface/gramatico_lib/: setup.py
interface/static/css/: style.css
interface/templates/: base.html  index.html
interface/uploads/: contracoes.txt  grammar.cnf
src/: CMakeLists.txt  delaf_dictionary.cpp
src/export/: contracoes.txt  home.py  sample.py
src/grammar/: CMakeLists.txt  grammar.cpp  grammar_ext.cpp
src/lexicon/: CMakeLists.txt  lexicon.cpp
src/lexicon/delas/: contractions_file.cpp  delas_file.cpp  delas_parser.cpp
tests/: CMakeLists.txt  ceten_corpus_test.cpp  colections_test.cpp  delaf_dictionary_test.cpp  dictionary_test.cpp  grammar_tests.cpp
